--- a/styles.css
+++ b/styles.css
@@ -943,11 +943,14 @@ body.dark-mode .start-container p {
     .option {
         padding: 10px;
         padding-right: 34px;
+        padding-left: 50px;
         font-size: 13px;
         min-height: 44px;
         line-height: 1.3;
         word-break: break-word;
         margin-bottom: 6px;
+        text-align: left;
+        direction: ltr;
     }
     
     .option::before {
